--- a/ByteReaderCLI/ByteReaderCLI.csproj
+++ b/ByteReaderCLI/ByteReaderCLI.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FF689939-A307-49A3-A5DC-928453047AF6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test</RootNamespace>
-    <AssemblyName>Test</AssemblyName>
+    <RootNamespace>ByteReaderCLI</RootNamespace>
+    <AssemblyName>ByteReaderCLI</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
